[project]
name = "pi-gate"
version = "0.1.0"
description = ""
authors = [
    {name = "shubham",email = "sk246903@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "dash (>=2.18.2,<3.0.0)",
    "dnslib (>=0.9.25,<0.10.0)",
    "sqlite-utils (>=3.38,<4.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dash-bootstrap-components (>=1.7.1,<2.0.0)"
]
packages = [{ include = "pi_gate" }]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[project.scripts]
pi-gate = "pi_gate.main:main"